@@ -31,6 +31,8 @@ Deprecations:
   * [MESOS-2281] - Deprecated the plain text format for credentials in favor of
     the JSON format.
 
+  * [MESOS-4910] - Deprecate the --docker_stop_timeout agent flag.
+
   * [MESOS-5001] - The 'allocator/event_queue_dispatches' metric is now
     deprecated in favor 'of allocator/mesos/event_queue_dispatches'.
 
